[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yantrikos"
version = "0.1.0"
description = "Yantrikos SDK — Build tier-aware tools for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yantrikos"}]
keywords = ["ai", "tools", "sdk", "tier", "agents", "yantrikos"]

[project.urls]
Homepage = "https://github.com/yantrikos/sdk"
Documentation = "https://github.com/yantrikos/sdk#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["yantrikos*"]
